--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
+    "discord-youtube-api": "^0.1.0",
     "discord.js": "^14.13.0",
     "ffmpeg-static": "^5.2.0",
     "prism-media": "^1.3.5",
     "sodium": "^3.0.2",
+    "spotify-web-api-node": "^5.0.2",
     "ytdl-core": "^4.11.5"
   }
 }
