--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "radiopele",
+  "name": "src",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
   "type": "module",
-  "scripts": {},
-  "author": "",
-  "license": "ISC",
+  "scripts": {
+    "start": "npx ts-node --esm ./src/index.ts"
+  },
   "dependencies": {
+    "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.0",
     "discord-youtube-api": "^0.1.0",
     "discord.js": "^14.13.0",
@@ -15,6 +14,11 @@
     "prism-media": "^1.3.5",
     "sodium": "^3.0.2",
     "spotify-web-api-node": "^5.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
     "ytdl-core": "^4.11.5"
+  },
+  "devDependencies": {
+    "@types/spotify-web-api-node": "^5.0.7"
   }
 }
