--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "npx ts-node --esm ./src/index.ts"
+    "start:dev": "npx tsm ./src/index.ts",
+    "start:prod": "pm2 start ./build/index.js --watch",
+    "build": "npx tsc"
   },
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
@@ -13,7 +15,7 @@
     "prism-media": "^1.3.5",
     "sodium": "^3.0.2",
     "spotify-web-api-node": "^5.0.2",
-    "ts-node": "^10.9.1",
+    "tsm": "^2.3.0",
     "typescript": "^5.2.2",
     "ytdl-core": "^4.11.5"
   },
