--- a/package.json
+++ b/package.json
@@ -1,26 +1,18 @@
 {
-  "name": "src",
+  "name": "radio-pele",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "cd src && npm i",
     "start:dev": "npx tsm ./src/index.ts",
-    "start:prod-dev": "node --experimental-specifier-resolution=node build/index.js --experimental-modules",
-    "start:prod": "pm2 start ./build/index.js --watch --node-args=\"--experimental-specifier-resolution=node\"",
-    "build": "npx tsc"
+    "start:prod-dev": "node build/index.js",
+    "start:prod": "npx pm2 start build/index.js --name radio-pele",
+    "build": "cd src && npx tsc && npx tsc-alias && @powershell copy package.json ../build/package.json && @powershell copy package-lock.json ../build/package-lock.json && @powershell copy .env ../build/.env && cd ../build && npm ci"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.16.0",
-    "discord.js": "^14.13.0",
-    "ffmpeg-static": "^5.2.0",
-    "prism-media": "^1.3.5",
-    "sodium": "^3.0.2",
-    "spotify-web-api-node": "^5.0.2",
+    "pm2": "^5.3.0",
+    "tsc-alias": "^1.8.8",
     "tsm": "^2.3.0",
-    "typescript": "^5.2.2",
-    "ytdl-core": "^4.10.0"
-  },
-  "devDependencies": {
-    "@types/spotify-web-api-node": "^5.0.7"
+    "typescript": "^5.2.2"
   }
 }
